--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <img
             src="https://cdn4.iconfinder.com/data/icons/evil-icons-user-interface/64/magnifier-512.png"
             alt="magnifier"
-            id="speechToText"
+           
             class="magnifier"
           />
-          <input type="text" class="input" placeholder="Search ..." />
+          <input type="text"  id="speechToText" class="input" placeholder="Search ..." />
           <img
             src="https://cdn1.iconfinder.com/data/icons/google-s-logo/150/Google_Icons-25-512.png"
             alt="mic-icon"
